--- a/example/package.json
+++ b/example/package.json
@@ -16,6 +16,7 @@
     "blueprintjs": "^0.0.8",
     "gojs": "^2.3.10",
     "gridstack": "^8.4.0",
+    "html-to-image": "^1.11.11",
     "jquery": "^3.7.0",
     "next": "13.4.13",
     "prismjs": "^1.29.0",
